--- a/deploy/pastar_web_worker.service
+++ b/deploy/pastar_web_worker.service
@@ -7,6 +7,7 @@ Type=forking
 User=ubuntu
 Group=ubuntu
 RuntimeDirectory=celery
+EnvironmentFile=/home/ubuntu/pastar_web_worker/worker/.aws_keys
 WorkingDirectory=/home/ubuntu/pastar_web_worker/worker
 ExecStart=celery -A celery_django.celeryconfig multi start worker -l INFO
 ExecStop=celery -A celery_django.celeryconfig multi stop worker -l INFO
